
****************************** DRUPAL 7 - 2.x BRANCH ********************************

June 29, 2011
-------------
by troky: Views updated to 7.x-3.0-rc1.
by troky: Removed all Nodecomment relaed code.

June 22, 2011
-------------
Issue #1194792 by a.ross: Removed 3px margin between post header and post body.

June 21, 2011
-------------
Issue #1194792 by a.ross: Changed .forum-post selector to div.forum-post to avoid some themes (bad) overrides.

June 18, 2011
-------------
by troky: Fixed theme views search path again.
by troky: Updated comment-wrapper.tpl

June 17, 2011
-------------
by troky: Changed code to delete all related AF variables on uninstall.

June 10,2011
------------
Issue #1182632 by troky: Added pager variable to topic header template.

June 06,2011
------------
Issue #1154588 by troky: Removed 'User picture preset' option from settings page when Author Pane is not installed.
by troky: Moved post-edited to template and removed theme function.
by troky: Moved shadow-topic to template and removed theme function.

June 05,2011
------------
Issue #1145852 by troky: Fixed permissions issue when upgraded from D6.
by troky: Fixed hardcoded 'forums' vocabulary machine_name in views.
Issue #1157054 by troky: Fixed bug in 'mark as read' code.

June 04, 2011
-------------
by troky: Updated topic_list preprocess function: getting 'tid' usig arg() replaced by using menu_get_item() function.
by troky: Fixed notice in views introduced by above patch.
by troky: Moved topic-pager to template and removed theme function.

June 02, 2011
-------------
by troky: Upgraded template_preprocess_advanced_forum_topic_list_view to Views 3.x

May 31, 2011
------------
by troky: Fixed missing forum data when only container is displayed.
by troky: Fixed theme views search path.

May 30, 2011
------------
by troky: Fixed ignored comment wrapper template.