@@ -15,9 +15,9 @@ files[] = includes/views/advanced_forum_plugin_style_forum_topic_list.inc
 
 core = 7.x
 
-; Information added by drupal.org packaging script on 2011-07-01
-version = "7.x-2.0-alpha2"
+; Information added by drupal.org packaging script on 2011-08-05
+version = "7.x-2.0-alpha3"
 core = "7.x"
 project = "advanced_forum"
-datestamp = "1309511215"
+datestamp = "1312537915"
 
