@@ -3,9 +3,9 @@ name = Naked
 description = Base style with no CSS except positioning. Meant as a starter style. Images are desaturated for easier recoloring.
 version = 2.x
 
-; Information added by drupal.org packaging script on 2011-07-01
-version = "7.x-2.0-alpha2"
+; Information added by drupal.org packaging script on 2011-08-05
+version = "7.x-2.0-alpha3"
 core = "7.x"
 project = "advanced_forum"
-datestamp = "1309511215"
+datestamp = "1312537915"
 
