@@ -1,6 +1,15 @@
 
 ****************************** DRUPAL 7 - 2.x BRANCH ********************************
 
+July 11, 2011
+-------------
+Issue #1197940 by a.ross: Added forum image option (was taxonomy image in D6).
+Issue #1208128 by troky: Fixed permalink text when page is out of range.
+
+July 01, 2011
+-------------
+7.x-2.0-ALPHA2 RELEASE
+
 June 29, 2011
 -------------
 by troky: Views updated to 7.x-3.0-rc1.
